syntax = "proto3";

package datastore;

option go_package = "github.com/ehsanfa/nimbus/datastore";

service DataStoreService {
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Prepare (PrepareRequest) returns (PrepareResponse) {}
    rpc Accept (AcceptRequest) returns (AcceptResponse) {}
    rpc Commit (CommitRequest) returns (CommitResponse) {}
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool ok = 2;
    string error = 3;
}

message PrepareRequest {
    string key = 1;
    int64 proposal = 2;
}

message PrepareResponse {
    bool promised = 1;
    string error = 2;
}

message AcceptRequest {
    string key = 1;
    int64 proposal = 2;
    string value = 3;
}

message AcceptResponse {
    bool accepted = 1;
    string error = 2; 
}

message CommitRequest {
    string key = 1;
    int64 proposal = 2;
}

message CommitResponse {
    bool committed = 1;
    string error = 2;
}